	     under Fedora 10
    - [8032] Link error whith GSL while compiling HelloWorld.cpp on OSX
    - [8225] Bug in the multiplication of a twist matrix (6x6) by a matrix (6xn)
    - [8248] Compilation error under Windows MSCV8 if deprecated functions 
	     are not build
    - [8249] Compilation error under Windows MSCV8 when building ViSP 
	     as a shared library (DLL)
----------------------------------------------	
ViSP 2.4.3 (released April 10th, 2009)
  - New Features
    - Add vpFeaturePointPolar corresponding the a 2D image point with 
      polar coordinates visual feature.
    - Add vpFeatureTranslation for cto (camera to object translation feature)
    - Add vpDisplay::setWindowPosition() functionality
  - Bug fixed
    - [7281] Segfault when displaying a vpCylinder.
    - [7308] Rotation vector not initialized to zero by the default constructor
    - [7309] visp-config --cflags produces a bad output
    - [7342] Bug in vpRobotAfma6::setVelocity(vpRobot::CAMERA_FRAME, v)
    - [7494] Division by 0 in vpHomography
    - [7424] Coin3D version 3 not supported under Windows
    - [7613] vpSimulator::getInternalImage() function yields to an infinite 
	     loop.
    - [7607] vpDisplayGTK bad window positionning
    - [7638] Memory leak in all vpFeature... classes
----------------------------------------------	
ViSP 2.4.3-rc2 (released January 29th, 2009)
  - Deprecated
    - Creation of a deprecated section in the online documentation that 
      gives the list of classes or member function that are deprecated
    - vpOSXcfoxGrabber was removed, since the C+Fox third party library 
      available at http://cfox.sourceforge.net/ was not updated since 2005.
    - vpIcCompGrabber was removed, since it uses a home made wrapper based 
      on itifg-7.2.1 driver which is not maintained yet
  - Testing
    - Use of CDash insteed of Dart2. Dashboards are sent to 
      http://cdash.irisa.fr/CDash/index.php?project=ViSP
  - Platform compatibility