@@ -20,6 +20,7 @@ ViSP 2.x.y
 	     are not build
     - [8249] Compilation error under Windows MSCV8 when building ViSP 
 	     as a shared library (DLL)
+    - [8257] Bug in vp1394TwoGrabber::resetBus()
 ----------------------------------------------	
 ViSP 2.4.3 (released April 10th, 2009)
   - New Features
